# QtRemoteDesktop

./: .gitignore  CMakeLists.txt  README.md
cmake/: SetupOpenSSL.cmake  SetupZstd.cmake
resources/: Info.plist.in  resources.qrc
resources/icons/: .delete_list.txt
resources/styles/: default.qss
resources/translations/: zh_CN.qm  zh_CN.ts
src/: main.cpp
src/client/: ClientManager.cpp  ClientManager.h  ClientRemoteWindow.cpp  ClientRemoteWindow.h  TcpClient.cpp  TcpClient.h  clientmanager.cpp  clientmanager.h  clientremotewindow.cpp  clientremotewindow.h  inputhandler.cpp  inputhandler.h  tcpclient.cpp  tcpclient.h
src/client/managers/: ConnectionManager.cpp  CursorManager.cpp  CursorManager.h  FileTransferManager.cpp  FileTransferManager.h  InputHandler.cpp  InputHandler.h  RenderManager.cpp  SessionManager.cpp  SessionManager.h  clipboardmanager.cpp  clipboardmanager.h  connectionmanager.cpp  connectionmanager.h  cursormanager.cpp  filetransfermanager.cpp  rendermanager.cpp  rendermanager.h  sessionmanager.cpp  sessionmanager.h
src/client/network/: ConnectionManager.cpp  ConnectionManager.h  TcpClient.cpp  TcpClient.h
src/client/window/: ClientRemoteWindow.cpp  ClientRemoteWindow.h  CursorManager.cpp  CursorManager.h  RenderManager.cpp  RenderManager.h
src/common/clipboard/: ClipboardManager.cpp  ClipboardManager.h
src/common/codec/: compressor_factory.cpp  compressor_factory.h  icodec.h  icompressor.h  icrypto.h  iimagecodec.h  lz4_compressor.cpp  lz4_compressor.h  zlib_compressor.cpp  zlib_compressor.h  zstd_compressor.cpp  zstd_compressor.h
src/common/core/: compression.cpp  compression.h  config.cpp  config.h  constants.cpp  constants.h  encryption.cpp  encryption.h  icodec.h  logger.cpp  logger.h  logging_categories.cpp  logging_categories.h  messageconstants.h  networkconstants.h  protocol.cpp  protocol.h  protocol_impl.cpp  protocolcodec.cpp  protocolcodec.h  uiconstants.h
src/common/core/base/: BaseManager.h
src/common/core/compression/: AdvancedCompressionManager.cpp  AdvancedCompressionManager.h  Compression.cpp  Compression.h  DifferentialCompression.cpp  DifferentialCompression.h
src/common/core/config/: Config.cpp  Config.h  Constants.cpp  Constants.h  MessageConstants.h  NetworkConstants.h  UiConstants.h
src/common/core/crypto/: Encryption.cpp  Encryption.h  SessionCrypto.cpp  SessionCrypto.h
src/common/core/logging/: DebugLogger.cpp  DebugLogger.h  LoggingCategories.cpp  LoggingCategories.h
src/common/core/memory/: ByteArrayPool.cpp  ByteArrayPool.h  ZeroCopyData.h
src/common/core/network/: NetworkMonitor.cpp  NetworkMonitor.h  Protocol.h  ProtocolImpl.cpp
src/common/core/threading/: PerformanceOptimizer.cpp  PerformanceOptimizer.h  ThreadCommunication.cpp  ThreadCommunication.h  ThreadManager.cpp  ThreadManager.h  ThreadSafeQueue.h  Worker.cpp  Worker.h
src/common/data/: DataRecord.h
src/common/transport/: itcptransport.h  itransport.h
src/common/types/: CommonTypes.h  NetworkTypes.h
src/common/windows/: ConnectionDialog.cpp  ConnectionDialog.h  MainWindow.cpp  MainWindow.h  SettingsDialog.cpp  SettingsDialog.h  connectiondialog.cpp  connectiondialog.h  mainwindow.cpp  mainwindow.h  settingsdialog.cpp  settingsdialog.h
src/server/: ClientHandler.cpp  ServerManager.cpp  ServerManager.h  ServerWorker.cpp  ServerWorker.h  TcpServer.cpp  clienthandler.cpp  clienthandler.h  inputsimulator.cpp  inputsimulator.h  screencapture.cpp  screencapture.h  servermanager.cpp  servermanager.h  tcpserver.cpp  tcpserver.h
src/server/capture/: CaptureConfig.h  ScreenCapture.cpp  ScreenCapture.h  ScreenCaptureWorker.cpp  ScreenCaptureWorker.h
src/server/clienthandler/: ClientHandlerWorker.cpp  ClientHandlerWorker.h
src/server/dataflow/: DataFlowStructures.cpp  DataFlowStructures.h  QueueManager.cpp  QueueManager.h
src/server/dataprocessing/: DataProcessing.cpp  DataProcessing.h  DataProcessingConfig.cpp  DataProcessingConfig.h  DataProcessingWorker.cpp  DataProcessingWorker.h  StorageManager.cpp  StorageManager.h
src/server/service/: ServerWorker.cpp  ServerWorker.h  TcpServer.cpp  TcpServer.h
src/server/simulator/: InputSimulator.cpp  InputSimulator.h  KeyboardSimulator.cpp  KeyboardSimulator.h  KeyboardSimulatorLinux.cpp  KeyboardSimulatorLinux.h  KeyboardSimulatorMacOS.cpp  KeyboardSimulatorMacOS.h  KeyboardSimulatorWindows.cpp  KeyboardSimulatorWindows.h  MouseSimulator.cpp  MouseSimulator.h  MouseSimulatorLinux.cpp  MouseSimulatorLinux.h  MouseSimulatorMacOS.cpp  MouseSimulatorMacOS.h  MouseSimulatorWindows.cpp  MouseSimulatorWindows.h
src/ui/: connectiondialog.ui  mainwindow.ui  settingsdialog.ui
test/: CMakeLists.txt  clientremotewindow_test.cpp  test_advancedcompressionmanager.cpp  test_clienthandlerworker.cpp  test_clientremotewindow.cpp  test_close_event.cpp  test_communication.cpp  test_compression_bench.cpp  test_compression_diff.cpp  test_compression_features.cpp  test_connection_manager.cpp  test_data_consistency.cpp  test_datacleaning_integration.cpp  test_dataprocessing.cpp  test_datavalidation_integration.cpp  test_error_handling.cpp  test_frame_transmission_latency.cpp  test_image_display.cpp  test_image_transmission_integration.cpp  test_image_type_specification.cpp  test_integration.cpp  test_large_message_chunked.cpp  test_logger.cpp  test_performance.cpp  test_producer_consumer_integration.cpp  test_protocol_codec.cpp  test_queuemanager.cpp  test_screen_capture_integration.cpp  test_screen_data_flow.cpp  test_screen_data_transmission.cpp  test_screencapture.cpp  test_screencaptureworker.cpp  test_session_manager.cpp  test_storagemanager.cpp  test_threadmanager.cpp
test/orphaned/: test_communication.cpp  test_image_display.cpp  test_image_type_specification.cpp  test_screencapture_config.cpp  test_screencapture_optimization.cpp
